# I2C-solenoid-ROS2-package

./: README.md
aphid_zone_trigger/aphid_zone_trigger/: package.xml  setup.cfg  setup.py
aphid_zone_trigger/aphid_zone_trigger/aphid_zone_trigger/: aphid_zone_trigger_node.py
aphid_zone_trigger/aphid_zone_trigger/launch/: aphid_zone_trigger.launch.py
i2c_solenoid_driver/i2c_solenoid_driver/: package.xml  setup.cfg  setup.py
i2c_solenoid_driver/i2c_solenoid_driver/i2c_solenoid_driver/: mcp23017_solenoid_node.py
i2c_solenoid_driver/i2c_solenoid_driver/launch/: i2c_solenoid_driver.launch.py
